# anderson-liang-sabia-2024-replication

./: .gitignore  config.py  main.ipynb  pyproject.toml  readme.md
data/: clean_seatbelt_long.dta  master_1983to2019.csv  master_1983to2019.dta  replicate_1983to1997.csv  replicate_1983to1997.dta  seer_age_cut_1969to2020.csv  seer_age_cut_1969to2020.dta
slides/: presentation.py
tools/: __init__.py
